[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "league-pixel-creator"
version = "1.0.0"
dependencies = []
requires-python = ">=3"
authors = [{ name = "Pradish Bijukchhe", email = "pradish@sandbox.com.np" }]
description = "league-pixel-creator is a python package designed to create League of Legends accounts"
readme = "README.md"
keywords = []
classifiers = ["Programming Language :: Python :: 3"]

[project.urls]
Homepage = "https://github.com/sandbox-pokhara/league-pixel-creator"
Issues = "https://github.com/sandbox-pokhara/league-pixel-creator/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"league_pixel_creator" = "league_pixel_creator"

[tool.isort]
line_length = 79
force_single_line = true

[tool.black]
line-length = 79
preview = true

[tool.pyright]
include = ["league_pixel_creator", "test.py"]
typeCheckingMode = "strict"
